--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
 			}
 		]
 	},
+	"repository": {
+		"type": "git",
+		"url": "https://csaar95.visualstudio.com/_git/oregator"
+	},
 	"__metadata": {
 		"id": "0c7b130c-f408-440d-8f99-d31bb79ceaf2",
 		"publisherDisplayName": "csaar95",
