--- a/language-configuration.json
+++ b/language-configuration.json
@@ -24,12 +24,12 @@
         ["[", "]"],
         ["(", ")"],
         ["'", "'"],
-        ["BATCH", "ENDBATCH;"],
-        ["BLOCK", "ENDBLOCK;"],
+//        ["BATCH", "ENDBATCH;"],
+//        ["BLOCK", "ENDBLOCK;"],
         ["COMPUTE", "END;"],
         ["FOOTER", "END;"],
         ["HEADER", "END;"],
-        ["IF", "ENDIF;"],
+//        ["IF", "ENDIF;"],
         ["INCLUDE", ";"],
         ["NEW", ";"],
         ["PREPEND", ";"],
