--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "oregator",
 	"displayName": "oregator",
 	"description": "language support for OREGATOR",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"publisher": "csaar95",
 	"engines": {
 		"vscode": "^1.19.0"
@@ -44,7 +44,12 @@
 				"scopeName": "source.oregator",
 				"path": "./syntaxes/oregator.tmLanguage.json"
 			}
-		]
+		],
+		"configurationDefaults": {
+			"[oregator]": {
+				"files.encoding": "iso88591"
+			}
+		}
 	},
 	"repository": {
 		"type": "git",
